# cavecanem

./: README.md
cavecanem_linux/: cavecanem.sh  makefile
cavecanem_linux/config/: cavecanem.xml  cavecanem_qos.xml
cavecanem_linux/main/: cavecanem.cpp  makefile  plugin.hpp  plugin_manager.cpp  plugin_manager.hpp  xml_parser.cpp  xml_parser.hpp
cavecanem_linux/plugins/: makefile
cavecanem_linux/plugins/cpu/: cpu.cpp  cpu.hpp  makefile
cavecanem_linux/plugins/disk/: disk.cpp  disk.hpp  disk.xml  makefile
cavecanem_linux/plugins/host_info/: host_info.hpp  host_info.xml  makefile
cavecanem_linux/plugins/memory/: makefile  memory.hpp  memory.xml
cavecanem_linux/plugins/net_load/: makefile  net_load.cpp  net_load.hpp  net_load.xml
cavecanem_linux/plugins/proc/: makefile  proc.cpp  proc.hpp
cavecanem_linux/plugins/proc_stat/: makefile  proc_stat.hpp
cavecanem_linux/plugins/snort/: makefile  snort.cpp  snort.hpp  snort.xml
cavecanem_publisher/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
cavecanem_publisher/etc/: Makefile.am  Makefile.in
cavecanem_publisher/etc/cavecanem/: cavecanem_publisher.xml
cavecanem_publisher/etc/cavecanem/qos/: cavecanem_publisher_qos.xml
cavecanem_publisher/etc/init.d/: cavecanem-publisher
cavecanem_publisher/m4/: boost.m4  ndds.m4
cavecanem_publisher/src/: Makefile.am  Makefile.in  cavecanem_publisher.cpp
cavecanem_publisher/src/plugins/: Makefile.am  Makefile.in  plugin.hpp
cavecanem_publisher/src/plugins/disk/: Makefile.am  Makefile.in  disk.cpp  disk.hpp  disk_dds.cxx  disk_dds.h  disk_ddsPlugin.cxx  disk_ddsPlugin.h  disk_ddsSupport.cxx  disk_ddsSupport.h
cavecanem_publisher/src/plugins/net_load/: Makefile.am  Makefile.in  net_load.cpp  net_load.hpp  net_load_dds.cxx  net_load_dds.h  net_load_ddsPlugin.h  net_load_ddsSupport.h
cavecanem_publisher/src/plugins/snort/: Makefile.am  Makefile.in  ids_dds.cxx  ids_dds.h  ids_dds.idl  ids_ddsPlugin.cxx  ids_ddsPlugin.h  ids_ddsSupport.h  snort.cpp  snort.hpp
cavecanem_publisher/src/plugins/system_monitor/: Makefile.am  Makefile.in  system_monitor.cpp  system_monitor.hpp  system_monitor_dds.h  system_monitor_dds.idl  system_monitor_ddsPlugin.cxx  system_monitor_ddsPlugin.h  system_monitor_ddsSupport.cxx  system_monitor_ddsSupport.h
cavecanem_subscriber/: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
cavecanem_subscriber/etc/: Makefile.am  Makefile.in
cavecanem_subscriber/etc/cavecanem/: cavecanem_subscriber.xml
cavecanem_subscriber/etc/cavecanem/qos/: cavecanem_subscriber_qos.xml
cavecanem_subscriber/etc/init.d/: cavecanem-subscriber
cavecanem_subscriber/m4/: boost.m4  mysql++.m4
cavecanem_subscriber/src/: Makefile.am  Makefile.in  cavecanem_subscriber.cpp
cavecanem_subscriber/src/plugins/: Makefile.am  Makefile.in  plugin.hpp
cavecanem_subscriber/src/plugins/disk/: Makefile.am  Makefile.in  disk.cpp  disk.hpp  disk_dds.h  disk_dds.idl  disk_ddsPlugin.h  disk_ddsSupport.h
cavecanem_subscriber/src/plugins/ids/: Makefile.am  Makefile.in  ids.cpp  ids.hpp  ids_dds.cxx  ids_dds.h  ids_dds.idl  ids_ddsPlugin.cxx  ids_ddsPlugin.h  ids_ddsSupport.cxx  ids_ddsSupport.h
cavecanem_subscriber/src/plugins/net_load/: Makefile.am  Makefile.in  net_load.cpp  net_load.hpp  net_load_dds.h  net_load_dds.idl  net_load_ddsPlugin.cxx  net_load_ddsPlugin.h  net_load_ddsSupport.cxx  net_load_ddsSupport.h
cavecanem_subscriber/src/plugins/system_monitor/: Makefile.am  Makefile.in  system_monitor.cpp  system_monitor.hpp  system_monitor_dds.cxx  system_monitor_dds.h  system_monitor_ddsPlugin.h  system_monitor_ddsSupport.h
cavecanem_webui/: index.php
cavecanem_webui/css/: layout.css  tema.css
cavecanem_webui/db/: db_manager.php
cavecanem_webui/plugins/: cpu.php  disk.php  host_info.php  ids.php  memory.php  net_load.php  proc.php  proc_stat.php
cavecanem_webui/ui/: ui.php
cavecanem_windows/: cavecanem_i86Win32VS2010.sln
cavecanem_windows/config/: cavecanem.xml
cavecanem_windows/main/: cavecanem.cpp  main.vcxproj  plugin.hpp  plugin_manager.cpp  plugin_manager.hpp  xml_parser.cpp  xml_parser.hpp
cavecanem_windows/plugins/cpu/: cpu.cpp  cpu.hpp  cpu.vcxproj  cpu.xml
cavecanem_windows/plugins/disk/: disk.cpp  disk.hpp  disk.vcxproj  disk.xml
cavecanem_windows/plugins/host_info/: host_info.cpp  host_info.hpp  host_info.vcxproj
cavecanem_windows/plugins/memory/: memory.cpp  memory.hpp  memory.vcxproj
cavecanem_windows/plugins/net_load/: net_load.cpp  net_load.hpp  net_load.vcxproj
cavecanem_windows/plugins/proc/: proc.cpp  proc.hpp  proc.vcxproj  proc.xml
cavecanem_windows/plugins/proc_stat/: proc_stat.cpp  proc_stat.hpp  proc_stat.vcxproj  proc_stat.xml
